--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_gravity="left|top"
             android:layout_row="1"
             android:onClick="playToneEast"
-            android:text="E" />
+            android:text="@string/right" />
 
         <Button
             android:layout_width="wrap_content"
@@ -35,7 +35,7 @@
             android:layout_gravity="left|top"
             android:layout_row="1"
             android:onClick="playToneWest"
-            android:text="W" />
+            android:text="@string/left" />
 
         <Button
             android:layout_width="wrap_content"
@@ -44,7 +44,7 @@
             android:layout_gravity="left|top"
             android:layout_row="0"
             android:onClick="playToneNorth"
-            android:text="N" />
+            android:text="@string/forward" />
 
         <Button
             android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
             android:layout_gravity="left|top"
             android:layout_row="2"
             android:onClick="playToneSouth"
-            android:text="S" />
+            android:text="@string/back" />
 
         <Button
             android:id="@+id/button1"
