--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,65 +1,111 @@
-<GridLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-	    xmlns:tools="http://schemas.android.com/tools"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:paddingBottom="@dimen/activity_vertical_margin"
-	    android:paddingLeft="@dimen/activity_horizontal_margin"
-	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin"
-	    tools:context=".MainActivity"
-        android:columnCount="3" >
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:columnCount="4"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity" >
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_gravity="left|center_vertical"
-            android:layout_row="3"
-            android:onClick="playToneStop"
-            android:text="@string/stop" />
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="3"
+        android:layout_gravity="left|top"
+        android:layout_row="6"
+        android:onClick="playToneEast"
+        android:text="@string/right" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_gravity="left|top"
-            android:layout_row="1"
-            android:onClick="playToneEast"
-            android:text="@string/right" />
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="0"
+        android:layout_gravity="left|top"
+        android:layout_row="6"
+        android:onClick="playToneWest"
+        android:text="@string/left" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_gravity="left|top"
-            android:layout_row="1"
-            android:onClick="playToneWest"
-            android:text="@string/left" />
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="2"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:onClick="playToneNorth"
+        android:text="@string/forward" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_gravity="left|top"
-            android:layout_row="0"
-            android:onClick="playToneNorth"
-            android:text="@string/forward" />
+    <Button
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="2"
+        android:layout_gravity="left|top"
+        android:layout_row="7"
+        android:onClick="playToneSouth"
+        android:text="@string/back" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_gravity="left|top"
-            android:layout_row="2"
-            android:onClick="playToneSouth"
-            android:text="@string/back" />
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="3"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:onClick="playToneNorthEast"
+        android:text="" />
 
-        <Button
-            android:id="@+id/button1"
-            android:layout_column="2"
-            android:layout_gravity="right|center_vertical"
-            android:layout_row="3"
-            android:text="@string/nextViewString" />
+    <Button
+        android:id="@+id/Button01"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="3"
+        android:layout_gravity="left|top"
+        android:layout_row="7"
+        android:onClick="playToneSouthEast"
+        android:text="" />
 
-    </GridLayout>
+    <Button
+        android:id="@+id/Button02"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="0"
+        android:layout_gravity="left|top"
+        android:layout_row="7"
+        android:onClick="playToneSouthWest"
+        android:text="" />
+
+    <Button
+        android:id="@+id/Button03"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_column="0"
+        android:layout_gravity="left|top"
+        android:layout_row="0"
+        android:onClick="playToneNorthWest"
+        android:text="" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_column="3"
+        android:layout_gravity="left|center_vertical"
+        android:layout_row="8"
+        android:onClick="playToneStop"
+        android:text="@string/stop" />
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_column="3"
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_row="8"
+        android:text="@string/nextViewString" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_column="3"
+        android:layout_gravity="center"
+        android:layout_row="8"
+        android:onClick="silence"
+        android:text="@string/silence" />
+
+</GridLayout>
